--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.37.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "^4.0.3",
     "vue-tailwind": "^2.5.1",
+    "vue3-apexcharts": "^1.4.1",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
