--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-apexcharts": "^1.6.2",
+    "vue-authenticate": "^1.5.0",
     "vue-router": "^4.0.3",
     "vue-tailwind": "^2.5.1",
     "vue3-apexcharts": "^1.4.1",
