--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "apexcharts": "^3.37.1",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
+    "jsonwebtoken": "^9.0.0",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "vue": "^3.2.13",
     "vue-apexcharts": "^1.6.2",
     "vue-authenticate": "^1.5.0",
     "vue-router": "^4.0.3",
     "vue-tailwind": "^2.5.1",
     "vue3-apexcharts": "^1.4.1",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "webpack": "^5.76.2",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
