--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "deploy": "node scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.1",
     "apexcharts": "^3.37.1",
     "core-js": "^3.8.3",
+    "cross-spawn": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "jsonwebtoken": "^9.0.0",
     "process": "^0.11.10",
@@ -39,6 +41,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
+    "execa": "^7.1.1",
     "prettier": "^2.8.4",
     "typescript": "~4.5.5"
   }
